...
                
                Button {
                    store.send(.authenticateUser)
                } label: {
                    HStack {
                        Image(systemName: "faceid")
                        Text("Authenticate")
                    }
                    .frame(maxWidth: .infinity)
                    .padding()
                    .background(Color.accentColor)
                    .foregroundColor(.white)
                    .clipShape(RoundedRectangle(cornerRadius: 12))
...
