...
            
            var displayName: String {
                switch self {
                case .minute: return "Last Minute"
                case .fiveMinutes: return "Last 5 Minutes"
                case .fifteenMinutes: return "Last 15 Minutes"
                case .hour: return "Last Hour"
                case .fourHours: return "Last 4 Hours"
                case .day: return "Last Day"
                case .week: return "Last Week"
                }
            }
            
...
